--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./css/index.css">
   <title>Spotifu</title>
 </head>
 <body>
+  <i class="icon-home"></i>
+  <div class="icon-home-active"></div>
 
 </body>
 </html>
