--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
   <link rel="stylesheet" href="./css/index.css">
   <title>Spotifu</title>
 </head>
-<body>
-  <i class="icon-home"></i>
-  <div class="icon-home-active"></div>
+<body class="body">
+  <button>
+    <i class="icon-home"></i>
+  </button>
+  <i class="icon-homeActive"></i>
+
+  <a href="#" class="link">haz click aquí</a>
+
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consequatur commodi laudantium ad sed doloremque officia fugiat repudiandae modi eos debitis saepe, hic accusamus, adipisci suscipit. Culpa rerum quam temporibus!</p>
 
 </body>
 </html>
