--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <button>
-    <i class="icon-home"></i>
+ <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
+  <i class="icon-play" aria-hidden="true"></i>
+ </button>
+  <button class="buttonIcon is-primary" aria-label="reproducir" title="reproducir">
+    <i class="icon-play" aria-hidden="true"></i>
   </button>
-  <i class="icon-homeActive"></i>
-
-  <a href="#" class="link">haz click aquí</a>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit consequatur commodi laudantium ad sed doloremque officia fugiat repudiandae modi eos debitis saepe, hic accusamus, adipisci suscipit. Culpa rerum quam temporibus!</p>
-
+  <button class="buttonIcon" aria-label="reproducir" title="reproducir">
+    <i class="icon-play" aria-hidden="true"></i>
+  </button>
 </body>
 </html>
