--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <div class="logo" role="banner">
+    <a href="/" aria-current="page">
+      <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
+    </a>
+  </div>
  <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
   <i class="icon-play" aria-hidden="true"></i>
  </button>
