--- a/index.html
+++ b/index.html
@@ -8,18 +8,66 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <div class="logo" role="banner">
+  <header class="logo" role="banner">
     <a href="/" aria-current="page">
       <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
     </a>
-  </div>
+  </header>
+
+  <nav class="list" aria-labelledby="library-navigation">
+    <h2 class="list-title" id="Library-navigation">Tu biblioteca</h2>
+    <ul class="list-content">
+      <li class="list-item">
+        <a href="#" class="link">Creada para ti</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Escuchado recientemente</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Tus Me Gusta</a>
+      </li>
+    </ul>
+  </nav>
+
+<nav class="list" aria-labelledby="playlist-navigation">
+  <h2 class="list-title" id="playlist-navigation">Playlist</h2>
+  <ul class="list-content">
+    <li class="list-item">
+      <a href="#" class="link">Lo mejor de lo mejor</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Naruto al 100% para programar</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Para cantar en la ducha</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Sin parar</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">naruto openings</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Boku no pico</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">This is Pokemón</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Más populares de la semana</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Mis pistas de shazam</a>
+    </li>
+    <li class="list-item">
+      <a href="#" class="link">Audio Library</a>
+    </li>
+  </ul>
+</nav>
  <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
   <i class="icon-play" aria-hidden="true"></i>
  </button>
   <button class="buttonIcon is-primary" aria-label="reproducir" title="reproducir">
-    <i class="icon-play" aria-hidden="true"></i>
-  </button>
-  <button class="buttonIcon" aria-label="reproducir" title="reproducir">
     <i class="icon-play" aria-hidden="true"></i>
   </button>
 </body>
