--- a/index.html
+++ b/index.html
@@ -13,6 +13,28 @@
       <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
     </a>
   </header>
+  <nav class="menu" area-label="Principal">
+    <ul class="menu-list">
+      <li class="menuItem is-active">
+        <a href="/" class="link" aria-current="page">
+          <i class="icon-home" aria-hidden="true"></i>
+          <span>Inicio</span>
+        </a>
+      </li>
+      <li class="menuItem">
+        <a href="/" class="link">
+          <i class="icon-search" aria-hidden="true"></i>
+          <span>Buscar</span>
+        </a>
+      </li>
+      <li class="menuItem">
+        <a href="/" class="link">
+          <i class="icon-creditCard" aria-hidden="true"></i>
+          <span>Premium</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
   <nav class="list" aria-labelledby="library-navigation">
     <h2 class="list-title" id="Library-navigation">Tu biblioteca</h2>
