--- a/index.html
+++ b/index.html
@@ -13,79 +13,96 @@
       <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
     </a>
   </header>
-  <nav class="menu" area-label="Principal">
-    <ul class="menu-list">
-      <li class="menuItem is-active">
-        <a href="/" class="link" aria-current="page">
-          <i class="icon-home" aria-hidden="true"></i>
-          <span>Inicio</span>
-        </a>
-      </li>
-      <li class="menuItem">
-        <a href="/" class="link">
-          <i class="icon-search" aria-hidden="true"></i>
-          <span>Buscar</span>
-        </a>
-      </li>
-      <li class="menuItem">
-        <a href="/" class="link">
-          <i class="icon-creditCard" aria-hidden="true"></i>
-          <span>Premium</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
 
-  <nav class="list" aria-labelledby="library-navigation">
-    <h2 class="list-title" id="Library-navigation">Tu biblioteca</h2>
+  <div class="sidebar">
+    <nav class="menu" area-label="Principal">
+      <ul class="menu-list">
+        <li class="menuItem is-active">
+          <a href="/" class="link" aria-current="page">
+            <i class="icon-home" aria-hidden="true"></i>
+            <span>Inicio</span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="/" class="link">
+            <i class="icon-search" aria-hidden="true"></i>
+            <span>Buscar</span>
+          </a>
+        </li>
+        <li class="menuItem">
+          <a href="/" class="link">
+            <i class="icon-creditCard" aria-hidden="true"></i>
+            <span>Premium</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <nav class="list" aria-labelledby="library-navigation">
+      <h2 class="list-title" id="Library-navigation">Tu biblioteca</h2>
+      <ul class="list-content">
+        <li class="list-item">
+          <a href="#" class="link">Creada para ti</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Escuchado recientemente</a>
+        </li>
+        <li class="list-item">
+          <a href="#" class="link">Tus Me Gusta</a>
+        </li>
+      </ul>
+    </nav>
+    <nav class="list" aria-labelledby="playlist-navigation">
+    <h2 class="list-title" id="playlist-navigation">Playlist</h2>
     <ul class="list-content">
       <li class="list-item">
-        <a href="#" class="link">Creada para ti</a>
+        <a href="#" class="link">Lo mejor de lo mejor</a>
       </li>
       <li class="list-item">
-        <a href="#" class="link">Escuchado recientemente</a>
+        <a href="#" class="link">Naruto al 100% para programar</a>
       </li>
       <li class="list-item">
-        <a href="#" class="link">Tus Me Gusta</a>
+        <a href="#" class="link">Para cantar en la ducha</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Sin parar</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">naruto openings</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Boku no pico</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">This is Pokemón</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Más populares de la semana para ti que eres una pro</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Mis pistas de shazam</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Audio Library</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Amor y otras</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Latin</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Pokemon</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Para cantar</a>
+      </li>
+      <li class="list-item">
+        <a href="#" class="link">Yui</a>
       </li>
     </ul>
-  </nav>
+    </nav>
+  </div>
 
-<nav class="list" aria-labelledby="playlist-navigation">
-  <h2 class="list-title" id="playlist-navigation">Playlist</h2>
-  <ul class="list-content">
-    <li class="list-item">
-      <a href="#" class="link">Lo mejor de lo mejor</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Naruto al 100% para programar</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Para cantar en la ducha</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Sin parar</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">naruto openings</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Boku no pico</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">This is Pokemón</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Más populares de la semana</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Mis pistas de shazam</a>
-    </li>
-    <li class="list-item">
-      <a href="#" class="link">Audio Library</a>
-    </li>
-  </ul>
-</nav>
  <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
   <i class="icon-play" aria-hidden="true"></i>
  </button>
