--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
         <a href="#" class="link">Lo mejor de lo mejor</a>
       </li>
       <li class="list-item">
-        <a href="#" class="link">Naruto al 100% para programar</a>
+        <span class="ellipsis">
+          <a href="#" class="link">Naruto al 100% para programar</a>
+        </span>
       </li>
       <li class="list-item">
-        <a href="#" class="link">Para cantar en la ducha</a>
+        <span class="ellipsis">
+          <a href="#" class="link">Para cantar en la ducha</a>
+        </span>
       </li>
       <li class="list-item">
         <a href="#" class="link">Sin parar</a>
@@ -76,7 +80,10 @@
         <a href="#" class="link">This is Pokemón</a>
       </li>
       <li class="list-item">
-        <a href="#" class="link">Más populares de la semana para ti que eres una pro</a>
+        <!-- la clase ellipsis debería ponerse en todos los elementos de lista -->
+        <span class="ellipsis">
+          <a href="#" class="link">Más populares de la semana para ti que eres una pro</a>
+        </span>
       </li>
       <li class="list-item">
         <a href="#" class="link">Mis pistas de shazam</a>
