--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
   <link rel="stylesheet" href="./css/index.css">
   <title>Spotifu</title>
 </head>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam omnis optio qui ducimus facilis ullam consequatur aperiam velit fugiat sit illum officiis maiores, numquam dolorum recusandae accusantium hic, dicta perspiciatis.</p>
 <body class="body">
   <header class="logo" role="banner">
     <a href="/" aria-current="page">
       <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
     </a>
   </header>
+  <div class="slider">
+    <div class="slider-progress">
+      <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+    </div>
+  </div>
 
   <div class="sidebar">
     <nav class="menu" area-label="Principal">
