--- a/index.html
+++ b/index.html
@@ -7,20 +7,38 @@
   <link rel="stylesheet" href="./css/index.css">
   <title>Spotifu</title>
 </head>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam omnis optio qui ducimus facilis ullam consequatur aperiam velit fugiat sit illum officiis maiores, numquam dolorum recusandae accusantium hic, dicta perspiciatis.</p>
 <body class="body">
-  <header class="logo" role="banner">
-    <a href="/" aria-current="page">
-      <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
-    </a>
-  </header>
-  <div class="slider">
-    <div class="slider-progress">
-      <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
-    </div>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam omnis optio qui ducimus facilis ullam consequatur aperiam velit fugiat sit illum officiis maiores, numquam dolorum recusandae accusantium hic, dicta perspiciatis.</p>
+<div class="playerControls">
+  <div class="playerControls-buttons">
+    <button class="buttonIcon" aria-label="Anterior" title="reproducir">
+      <i class="icon-prev" aria-hidden="true"></i>
+    </button>
+    <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
+      <i class="icon-play" aria-hidden="true"></i>
+    </button>
+    <button class="buttonIcon" aria-label="Siguiente" title="reproducir">
+      <i class="icon-next" aria-hidden="true"></i>
+    </button>
   </div>
-
+  <div class="playerPlayback">
+    <span class="playerPlayback-progressTime">01:40</span>
+    <div class="playerPlayback-slider">
+      <div class="slider">
+        <div class="slider-progress">
+          <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+        </div>
+      </div>
+    </div>
+    <span class="playerPlayback-progressTime">01:40</span>
+  </div>
+</div>
   <div class="sidebar">
+    <header class="logo" role="banner">
+      <a href="/" aria-current="page">
+        <img src="./images/spotifu-logo.png" class="logo-image" width="112px" height="32px" alt="Logo de Spotify">
+      </a>
+    </header>
     <nav class="menu" area-label="Principal">
       <ul class="menu-list">
         <li class="menuItem is-active">
@@ -115,12 +133,5 @@
     </ul>
     </nav>
   </div>
-
- <button class="buttonIcon is-white" aria-label="reproducir" title="reproducir">
-  <i class="icon-play" aria-hidden="true"></i>
- </button>
-  <button class="buttonIcon is-primary" aria-label="reproducir" title="reproducir">
-    <i class="icon-play" aria-hidden="true"></i>
-  </button>
 </body>
 </html>
