--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam omnis optio qui ducimus facilis ullam consequatur aperiam velit fugiat sit illum officiis maiores, numquam dolorum recusandae accusantium hic, dicta perspiciatis.</p>
+  <div class="nowPlaying">
+    <img src="./images/grand-scape.png" width="56px" height="56px" alt="Portada Grand Escape (feat. Tokio Miura) de RADWIMPS, Tokio Miura" title="Portada Grand Escape (feat. Tokio Miura) de RADWIMPS, Tokio Miura">
+    <div class="nowPlaying-details">
+      <div class="nowPlaying-description">
+        <a href="#song" class="nowPlaying-tittle">Grand Escape (feat. Tokio Miura)</a>
+        <a href="RADWIMPS" class="nowPlaying-artist">RADWIMPS, Tokio Miura</a>
+      </div>
+      <div class="nowPlaying-actions">
+        <button class="player-control" role="switch" aria-label="guardar en tu biblioteca" title="guardar en tu biblioteca">
+          <i class="icon-heart" aria-hidden="true"></i>
+        </button>
+      </div>
+    </div>
+  </div>
 <div class="playerControls">
-  <div class="playerControls-buttons">
+  <div class="playerControls-buttons" aria-label="Controles de reproducción">
     <button class="buttonIcon" aria-label="Anterior" title="reproducir">
       <i class="icon-prev" aria-hidden="true"></i>
     </button>
@@ -33,6 +46,19 @@
     <span class="playerPlayback-progressTime">01:40</span>
   </div>
 </div>
+
+  <div class="playerVolume">
+    <button class="player-control" aria-label="Silenciar" aria-describedby="volumen-icon">
+      <i class="icon-volumeUp" id="volumen-icon" role="presentation" aria-label="Volumen alto"></i>
+    </button>
+    <div class="playerVolume-slider">
+      <div class="slider">
+        <div class="slider-progress">
+          <button class="slider-button" aria-label="Controlar el progreso de la reproducción"></button>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="sidebar">
     <header class="logo" role="banner">
       <a href="/" aria-current="page">
