--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <div class="playlistA">
+  <div class="playlistA-cover">
+    <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+    <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+      <i class="icon-play" aria-hidden="true"></i>
+    </button>
+  </div>
+  <h3 class="playlistA-title">Anime Hits</h3>
+  <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+  </div>
   <div class="sidebar">
     <header class="logo" role="banner">
       <a href="/" aria-current="page">
