--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <div class="playlistB">
+    <div class="playlistB-cover">
+      <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+    </div>
+    <div class="playlistB-details">
+      <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+      <div class="playlistB-control">
+        <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+          <i class="icon-play"></i>
+        </button>
+      </div>
+    </div>
+  </div>
+
   <div class="playlistA">
   <div class="playlistA-cover">
     <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
