--- a/index.html
+++ b/index.html
@@ -8,30 +8,273 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <div class="playlistB">
-    <div class="playlistB-cover">
-      <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+  <section class="playlistlist" aria-label="region1">
+    <div class="playlistlist-top">
+      <h2 class="playlistlist-title" id="region1">
+        Buenas noches
+      </h2>
     </div>
-    <div class="playlistB-details">
-      <h3 class="playlistB-title">Naruto Openings & Endings</h3>
-      <div class="playlistB-control">
-        <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
-          <i class="icon-play"></i>
-        </button>
+    <div class="playlistlist-container">
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="playlistB">
+        <div class="playlistB-cover">
+          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+        </div>
+        <div class="playlistB-details">
+          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <div class="playlistB-control">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+              <i class="icon-play"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div class="playlistA">
-  <div class="playlistA-cover">
-    <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
-    <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
-      <i class="icon-play" aria-hidden="true"></i>
-    </button>
-  </div>
-  <h3 class="playlistA-title">Anime Hits</h3>
-  <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
-  </div>
+  <section class="playlistlist" aria-label="region1">
+    <div class="playlistlist-top">
+      <h2 class="playlistlist-title" id="region1">
+        Escuchado Recientemente
+      </h2>
+    </div>
+    <div class="playlistlist-container">
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+      <div class="playlistA">
+        <div class="playlistA-cover">
+          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
+            <i class="icon-play" aria-hidden="true"></i>
+          </button>
+        </div>
+        <h3 class="playlistA-title">Anime Hits</h3>
+        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+      </div>
+    </div>
+  </section>
+
   <div class="sidebar">
     <header class="logo" role="banner">
       <a href="/" aria-current="page">
