--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <div class="playlistlist-container">
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+          <img src="./images/HectorLavoe.jpg" width="76" height="76" alt="Cover de la playlist Anime hits">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <h3 class="playlistB-title">De ti depende</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción de De ti depende">
               <i class="icon-play"></i>
             </button>
           </div>
@@ -30,12 +30,12 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+          <img src="./images/Theoutfield.jpg" width="76" height="76" alt="Cover de la playlist Anime hits">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <h3 class="playlistB-title">The Outfield</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Big innings">
               <i class="icon-play"></i>
             </button>
           </div>
@@ -43,12 +43,12 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+          <img src="./images/BeeGees.jpg" width="76" height="76" alt="Cover de la playlist Anime hits">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <h3 class="playlistB-title">Bee Gees</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Bee Gees">
               <i class="icon-play"></i>
             </button>
           </div>
@@ -56,12 +56,12 @@
       </div>
       <div class="playlistB">
         <div class="playlistB-cover">
-          <img src="./images/anime-hits.png" width="76" height="76" alt="Cover de la playlist Anime hits">
+          <img src="./images/Beethoven.jpg" width="76" height="76" alt="Cover de la playlist Anime hits">
         </div>
         <div class="playlistB-details">
-          <h3 class="playlistB-title">Naruto Openings & Endings</h3>
+          <h3 class="playlistB-title">Beethoven</h3>
           <div class="playlistB-control">
-            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Openings & Endings">
+            <button class="buttonIcon is-primary" title="Reproducir la lista de reproducción Naruto Beethoven">
               <i class="icon-play"></i>
             </button>
           </div>
@@ -144,83 +144,83 @@
     <div class="playlistlist-container">
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/Nirvana.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Nirvana</h3>
+        <h4 class="playlistA-description">Nevermind, where the 90's rock born</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/CCR.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Creedence ClearWater Revival</h3>
+        <h4 class="playlistA-description">The 20 greatest hits</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/TheVerve.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">The Verve</h3>
+        <h4 class="playlistA-description">Human Hymns</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/Ratatat.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">RATATAT</h3>
+        <h4 class="playlistA-description">Magnifique</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/Whitley.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Whitley</h3>
+        <h4 class="playlistA-description">Go forth, find Mammoth</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/Soda.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Soda Estereo</h3>
+        <h4 class="playlistA-description">Gracias Totales</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/Warcraft3.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Warcraft3</h3>
+        <h4 class="playlistA-description">!For the alliance!</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
-          <img src="./images/anime-hits.png" width="150" height="150" alt="Cover de la playlist A">
+          <img src="./images/DepecheMode.jpg" width="150" height="150" alt="Cover de la playlist A">
           <button class="buttonIcon is-primary" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
           </button>
         </div>
-        <h3 class="playlistA-title">Anime Hits</h3>
-        <h4 class="playlistA-description">Naruto, Your name, Weathing With You</h4>
+        <h3 class="playlistA-title">Depeche Mode</h3>
+        <h4 class="playlistA-description">Enjoy The Silence</h4>
       </div>
       <div class="playlistA">
         <div class="playlistA-cover">
