--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
+    <i class="icon-search" aria-hidden="true"></i>
+    <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
+  </form>
   <section class="playlistlist" aria-label="region1">
     <div class="playlistlist-top">
       <h2 class="playlistlist-title" id="region1">
