--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
+  <div class="navigation">
+    <button class="navigation-prev" aria-label="Volver" title="Volver">
+      <i class="icon-arrowLeft" aria-hidden="true"></i>
+    </button>
+    <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
+      <i class="icon-arrowRight"></i>
+    </button>
+  </div>
+
   <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
     <i class="icon-search" aria-hidden="true"></i>
     <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
@@ -17,6 +26,14 @@
       <h2 class="playlistlist-title" id="region1">
         Buenas noches
       </h2>
+      <div class="navigation">
+        <button class="navigation-prev" aria-label="Volver" title="Volver">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight"></i>
+        </button>
+      </div>
     </div>
     <div class="playlistlist-container">
       <div class="playlistB">
@@ -144,6 +161,14 @@
       <h2 class="playlistlist-title" id="region1">
         Escuchado Recientemente
       </h2>
+      <div class="navigation">
+        <button class="navigation-prev" aria-label="Volver" title="Volver">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight"></i>
+        </button>
+      </div>
     </div>
     <div class="playlistlist-container">
       <div class="playlistA">
