--- a/index.html
+++ b/index.html
@@ -8,19 +8,23 @@
   <title>Spotifu</title>
 </head>
 <body class="body">
-  <div class="navigation">
-    <button class="navigation-prev" aria-label="Volver" title="Volver">
-      <i class="icon-arrowLeft" aria-hidden="true"></i>
-    </button>
-    <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
-      <i class="icon-arrowRight"></i>
-    </button>
+  <div class="sticky">
+    <header class="header" aria-label="Barra superior y menú del usuario">
+      <div class="navigation">
+        <button class="navigation-prev" aria-label="Volver" title="Volver">
+          <i class="icon-arrowLeft" aria-hidden="true"></i>
+        </button>
+        <button class="navigation-next" disabled aria-label="Avanzar" title="Avanzar">
+          <i class="icon-arrowRight"></i>
+        </button>
+      </div>
+      <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
+        <i class="icon-search" aria-hidden="true"></i>
+        <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
+      </form>
+    </header>
   </div>
 
-  <form class="search" role="search" aria-label="Buscar por Artistas, canciones o podcast">
-    <i class="icon-search" aria-hidden="true"></i>
-    <input type="search" placeholder="Buscar por Artistas, canciones o podcast">
-  </form>
   <section class="playlistlist" aria-label="region1">
     <div class="playlistlist-top">
       <h2 class="playlistlist-title" id="region1">
