--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <meta property="og:title" content="Spotifu By Carlos Fernando" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://carlosfpj.github.io/Spotifu/" />
+    <meta property="og:image" content="https://carlosfpj.github.io/Spotifu/images/spotifu-logo.png" />
+    <meta property="og:description" content="Enjoy a magestic layout copy of the Spotify interface made with CSS flexbox" />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
