--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h2 class="list-title" id="playlist-navigation">Playlist</h2>
             <ul class="list-content">
               <li class="list-item">
-                <a href="#" class="link">Lo mejor de lo mejor</a>
+                <a href="./pages/playlist.html" class="link">Weathering with you</a>
               </li>
               <li class="list-item">
                 <span class="ellipsis">
